--- a/sourcekitten.xcodeproj/xcshareddata/xcschemes/SourceKittenFramework.xcscheme
+++ b/sourcekitten.xcodeproj/xcshareddata/xcschemes/SourceKittenFramework.xcscheme
@@ -52,6 +52,32 @@
                BlueprintName = "SourceKittenFrameworkTests"
                ReferencedContainer = "container:SourceKitten.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "FileTests">
+               </Test>
+               <Test
+                  Identifier = "ModuleTests">
+               </Test>
+               <Test
+                  Identifier = "OffsetMapTests">
+               </Test>
+               <Test
+                  Identifier = "SourceKitTests">
+               </Test>
+               <Test
+                  Identifier = "StringTests">
+               </Test>
+               <Test
+                  Identifier = "StructureTests">
+               </Test>
+               <Test
+                  Identifier = "SwiftDocsTests">
+               </Test>
+               <Test
+                  Identifier = "SyntaxTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
