--- a/sourcekitten.xcodeproj/xcshareddata/xcschemes/SourceKittenFramework.xcscheme
+++ b/sourcekitten.xcodeproj/xcshareddata/xcschemes/SourceKittenFramework.xcscheme
@@ -54,6 +54,9 @@
             </BuildableReference>
             <SkippedTests>
                <Test
+                  Identifier = "CodeCompletionTests">
+               </Test>
+               <Test
                   Identifier = "FileTests">
                </Test>
                <Test
